--- a/nginx.yml
+++ b/nginx.yml
@@ -30,6 +30,7 @@
                     src: files/nginx/symfony
                     dest: /etc/nginx/sites-available/symfony
                     mode: 0640
+                    owner: root
 
           - name: Create Symfony log repository
             file:
@@ -62,24 +63,23 @@
             file:
                     path: /var/www/symfony
                     state: directory
+                    mode: 0666
+                    owner: www-data
+                    group: www-data
 
           - name: Push PHP test file
             copy:
                     src: files/nginx/index.php
                     dest: /var/www/symfony/index.php
-                    mode: 0640
+                    mode: 0644
+                    owner: www-data
+                    group: www-data
 
             #- name: Deploy our awesome application
             #git:
             #        repo: https://github.com/benwend/Cernunnos.git
             #        dest: /var/www/symfony
             #tags: deploy
-
-          - name: Change owner
-            command: 'chown www-data: -R /var/www/symfony'
-
-          - name: Change mode
-            command: 'chmod a+r -R /var/www/symfony'
 
           - name: Activate symfony virtualhost
             file:
