fix(hosts): Replace the linux group by debian10

--- a/default.yml
+++ b/default.yml
@@ -7,7 +7,7 @@
 #   Ensures that a host has NGINX installed
 #
 ###########
-- hosts: linux
+- hosts: debian10
   tasks:
           - name: Push the complete source list
             copy:
