fix(main): repair bad indent in YML task files

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Push Symfony virtual host configuration
   copy:
-          src: files/nginx/symfony
+          src: files/symfony
           dest: /etc/nginx/sites-available/symfony
           mode: 0640
           owner: root
@@ -36,16 +36,19 @@
   file:
           path: /var/log/nginx/symfony
           state: absent
-          when: result is failed
+  when: result is failed
+
 - name: Rolling back - Removing our virtualhost
   file:
           path: /etc/nginx/sites-available/symfony
           state: absent
-          when: result is failed
+  when: result is failed
+
 - name: Rolling back - Ending playbook
   fail:
           msg: "ERROR: Nginx configuration file is not valid. Please check that before re-running the playbook."
-          when: result is failed
+  when: result is failed
+
 - name: Create web Symfony repository (env=dev)
   file:
           path: /var/www/symfony
@@ -53,9 +56,10 @@
           mode: 0666
           owner: www-data
           group: www-data
+
 - name: Push PHP test file
   copy:
-          src: files/nginx/index.php
+          src: files/index.php
           dest: /var/www/symfony/index.php
           mode: 0644
           owner: www-data
@@ -72,12 +76,12 @@
           src: /etc/nginx/sites-available/symfony
           dest: /etc/nginx/sites-enabled/symfony
           state: link
-          notify:
-                  - Reload nginx
+  notify:
+          - Reload nginx
 
 - name: Disable the default Nginx virtualhost
   file:
           dest: /etc/nginx/sites-enabled/default
           state: absent
-          notify:
-                  - Reload nginx
+  notify:
+          - Reload nginx
