--- a/roles/default/tasks/main.yml
+++ b/roles/default/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Push the complete source list
   copy:
-          src: files/default/apt/sources.list
+          src: files/sources.list
           dest: /etc/apt/sources.list
           mode: 0644
           notify: Update APT
