--- a/roles/default/tasks/main.yml
+++ b/roles/default/tasks/main.yml
@@ -15,6 +15,8 @@
                   - vim
                   - indent
                   - ctags
+                  - pigz
+                  - dos2unix
           install_recommends: no
           state: latest
           update_cache: true
