feat(ssh): Push a new SSHD config file and reload it

--- a/roles/default/handlers/main.yml
+++ b/roles/default/handlers/main.yml
@@ -7,3 +7,8 @@
           purge: yes
           upgrade: full
           update_cache: yes
+
+- name: Reload SSH
+  systemd:
+          name: ssh
+          state: reloaded
