up(common): Add tree pkg and remove ctags/indent

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,14 +15,13 @@
 - name: Install the base packages
   apt:
           pkg:
-                  - sudo
-                  - htop
                   - bash-completion
-                  - vim
-                  - indent
-                  - ctags
-                  - pigz
                   - dos2unix
+                  - htop
+                  - pigz
+                  - tree
+                  - vim
+                  - sudo
           install_recommends: no
           state: latest
           update_cache: true
