--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -32,3 +32,24 @@
           dest: /etc/ssh/sshd_config
           mode: 0644
   notify: Reload SSH
+
+- name: Backup the dist SSH client config file
+  command: cp -a /etc/ssh/ssh_config /etc/ssh/ssh_config.dist
+
+- name: Push the ssh client config file
+  copy:
+          src: templates/ssh_config
+          dest: /etc/ssh/ssh_config
+          mode: 0644
+
+- name: Create the SSH repository in /etc/skel
+  file:
+          path: /etc/skel/.ssh
+          state: directory
+          mode: 0700
+
+- name: Push the SSH client template in /etc/skel
+  copy:
+          src: templates/config.ssh
+          dest: /etc/skel/.ssh/config
+          mode: 0700
