up(php-fpm): Add 2 news packages like acpu and xdebug

--- a/roles/php-fpm/tasks/main.yml
+++ b/roles/php-fpm/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Install PHP-FPM and modules
   apt:
           pkg:
+                  - php-apcu
                   - php-amqp
                   - php-curl
                   - php-fpm
@@ -11,6 +12,7 @@
                   - php-memcached
                   - php-pgsql
                   - php-redis
+                  - php-xdebug
                   - php-xml
                   - php-zip
           state: latest
