change(tags): Create an installation tag only to backup the dist/valid configuration files

--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -8,6 +8,7 @@
 
 - name: Backup the dist PostgreSQL configuration
   command: cp -a /etc/postgresql/11/main/postgresql.conf /etc/postgresql/11/main/postgresql.conf.bck
+  tags: install
 
 - name: Push the PostgreSQL Configuration
   copy:
@@ -18,6 +19,7 @@
 
 - name: Backup the dist pg_hba Configuration
   command: cp -a /etc/postgresql/11/main/pg_hba.conf /etc/postgresql/11/main/pg_hba.conf.bck
+  tags: install
 
 - name: Push the pg_hba configuration
   copy:
@@ -36,11 +38,11 @@
   ignore_errors: True
 
 - name: Rolling back - Push the postgres config
-  command: mv /etc/postgresql/11/main/pg_hba.conf.bck /etc/postgresql/11/main/pg_hba.conf
+  command: cp -a /etc/postgresql/11/main/pg_hba.conf.bck /etc/postgresql/11/main/pg_hba.conf
   when: result is failed
 
 - name: Rolling back - Push the postgres config
-  command: mv /etc/postgresql/11/main/postgresql.conf.bck /etc/postgresql/11/main/postgresql.conf
+  command: cp -a /etc/postgresql/11/main/postgresql.conf.bck /etc/postgresql/11/main/postgresql.conf
   when: result is failed
 
 - name: Rolling back - Ending playbook
