update(tmux): Add a tmux config file and a host var to push this file for a user

--- a/roles/personal/tasks/main.yml
+++ b/roles/personal/tasks/main.yml
@@ -5,5 +5,18 @@
                   - clementine
                   - keepass2
                   - tmux
+                  - vlc
           install_recommends: no
           state: latest
+
+- name: Push the tmux config template in /etc/skel
+  copy:
+          src: templates/tmux.conf
+          dest: /etc/skel/.tmux.conf
+          mode: 644
+
+- name: Push also the tmux config for my user
+  copy:
+          src: templates/tmux.conf
+          dest: "/home/{{ user }}/.tmux.conf"
+          mode: 644
