up(git): Push the config file also for my personal user

--- a/roles/devel/tasks/main.yml
+++ b/roles/devel/tasks/main.yml
@@ -16,3 +16,9 @@
           src: templates/gitconfig
           dest: /etc/skel/.gitconfig
           mode: 0644
+
+- name: Push the Git config file for my user
+  copy:
+          src: templates/gitconfig
+          dest: "/home/{{ user }}/.gitconfig"
+          mode: 0644
