up(devel): Add ipython packages

--- a/roles/devel/tasks/main.yml
+++ b/roles/devel/tasks/main.yml
@@ -8,6 +8,8 @@
                   - openjdk-11-jre
                   - python-pip
                   - python3-pip
+                  - ipython
+                  - ipython3
           install_recommends: no
           state: latest
 
