--- a/roles/virtualbox-host/tasks/main.yml
+++ b/roles/virtualbox-host/tasks/main.yml
@@ -20,6 +20,6 @@
 
 - name: Download the additions
   get_url:
-          url: https://download.virtualbox.org/virtualbox/6.1.18/Oracle_VM_VirtualBox_Extension_Pack-6.1.18.vbox-extpack
-          dest: /opt/Oracle_VM_VirtualBox_Extension_Pack-6.1.18.vbox-extpack
+          url: "https://download.virtualbox.org/virtualbox/{{ virtualbox_version }}/Oracle_VM_VirtualBox_Extension_Pack-{{ virtualbox_version }}.vbox-extpack"
+          dest: "/opt/Oracle_VM_VirtualBox_Extension_Pack-{{ virtualbox_version }}.vbox-extpack"
           mode: 0755
