add(common): Push config vim and bash files for user and root

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -56,3 +56,39 @@
 
 - name: Generate the new locale
   command: locale-gen
+
+- name: Push bashrc file for my user
+  copy:
+          src: templates/bashrc
+          dest: "/home/{{ user }}/.bashrc"
+          mode: 0644
+
+- name: Push alias config file for standard user
+  copy:
+          src: templates/bash_aliases
+          dest: "/home/{{ user }}/.bash_aliases"
+          mode: 0644
+
+- name: Push vim config file for standard user
+  copy:
+          src: templates/vimrc
+          dest: "/home/{{ user }}/.vimrc"
+          mode: 0644
+
+- name: Push bashrc file for the user root
+  copy:
+          src: templates/bashrc-root
+          dest: /root/.bashrc
+          mode: 0644
+
+- name: Push alias config file for user root
+  copy:
+          src: templates/bash_aliases
+          dest: /root/.bash_aliases
+          mode: 0644
+
+- name: Push vim config file for user root
+  copy:
+          src: templates/vimrc
+          dest: /root/.vimrc
+          mode: 0644
