add(personal): Install the manpages in french

--- a/roles/personal/tasks/main.yml
+++ b/roles/personal/tasks/main.yml
@@ -4,6 +4,8 @@
           pkg:
                   - clementine
                   - keepass2
+                  - manpages-fr
+                  - manpages-fr-dev
                   - tmux
                   - vlc
           install_recommends: no
