--- a/roles/personal/tasks/main.yml
+++ b/roles/personal/tasks/main.yml
@@ -35,8 +35,26 @@
           dest: "/home/{{ user }}/.bash_aliases"
           mode: 0644
 
+- name: Push vim config file for my user
+  copy:
+          src: templates/vimrc
+          dest: "/home/{{ user }}/.vimrc"
+          mode: 0644
+
 - name: Push bashrc file for the user root
   copy:
           src: templates/bashrc-root
           dest: /root/.bashrc
+          mode: 0644
+
+- name: Push alias config file for user root
+  copy:
+          src: templates/bash_aliases-root
+          dest: /root/.bash_aliases
+          mode: 0644
+
+- name: Push vim config file for user root
+  copy:
+          src: templates/vimrc
+          dest: /root/.vimrc
           mode: 0644
