up(ssh): Complete the role and base on vim

--- a/roles/ssh/handlers/main.yml
+++ b/roles/ssh/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Reload SSH
+- name: Reload SSHd
   systemd:
-          name: ssh
-          state: reloaded
+    name: ssh
+    state: reloaded
