up(role/common): Add new apt packages and a README

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -13,8 +13,12 @@
   apt:
     pkg:
       - bash-completion
+      - ccze
+      - dfc
       - dos2unix
       - htop
+      - lnav
+      - needrestart
       - pigz
       - tree
       - sudo
